--- a/kuka_gazebo/package.xml
+++ b/kuka_gazebo/package.xml
@@ -23,6 +23,9 @@
   <build_depend>joint_trajectory_controller</build_depend>
   <build_depend>robot_state_publisher</build_depend>
   <build_depend>moveit_kinematics</build_depend>
+  <build_depend>ros_controllers</build_depend>
+  <build_depend>position_controllers</build_depend>
+  <build_depend>gazebo</build_depend>
 
   <build_export_depend>controller_manager</build_export_depend>
   <build_export_depend>effort_controllers</build_export_depend>
@@ -32,6 +35,9 @@
   <build_export_depend>joint_trajectory_controller</build_export_depend>
   <build_export_depend>robot_state_publisher</build_export_depend>
   <build_export_depend>moveit_kinematics</build_export_depend>
+  <build_export_depend>ros_controllers</build_export_depend>
+  <build_export_depend>position_controllers</build_export_depend>
+  <build_export_depend>gazebo</build_export_depend>
 
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>effort_controllers</exec_depend>
@@ -41,8 +47,10 @@
   <exec_depend>joint_trajectory_controller</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>moveit_kinematics</exec_depend>
-
-
+  <exec_depend>gazebo_ros_pkgs</exec_depend>
+  <exec_depend>ros_controllers</exec_depend>
+  <exec_depend>position_controllers</exec_depend>
+  <exec_depend>gazebo</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
