--- a/kuka_gazebo/package.xml
+++ b/kuka_gazebo/package.xml
@@ -23,7 +23,7 @@
   <build_depend>joint_trajectory_controller</build_depend>
   <build_depend>robot_state_publisher</build_depend>
   <build_depend>moveit_kinematics</build_depend>
-  <build_depend>ros_controllers</build_depend>
+  <!-- <build_depend>ros_controllers</build_depend> -->
   <build_depend>position_controllers</build_depend>
   <build_depend>gazebo</build_depend>
 
@@ -35,7 +35,7 @@
   <build_export_depend>joint_trajectory_controller</build_export_depend>
   <build_export_depend>robot_state_publisher</build_export_depend>
   <build_export_depend>moveit_kinematics</build_export_depend>
-  <build_export_depend>ros_controllers</build_export_depend>
+  <!-- <build_export_depend>ros_controllers</build_export_depend> -->
   <build_export_depend>position_controllers</build_export_depend>
   <build_export_depend>gazebo</build_export_depend>
 
@@ -48,7 +48,7 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>moveit_kinematics</exec_depend>
   <exec_depend>gazebo_ros_pkgs</exec_depend>
-  <exec_depend>ros_controllers</exec_depend>
+  <!-- <exec_depend>ros_controllers</exec_depend> -->
   <exec_depend>position_controllers</exec_depend>
   <exec_depend>gazebo</exec_depend>
   <!-- The export tag contains other, unspecified, tags -->
